src/test/ui/duplicate/duplicate-parameter.stderr
error[E0415]: identifier `a` is bound more than once in this parameter list
  --> $DIR/duplicate-parameter.rs:1:16
   |
LL | fn f(a: isize, a: isize) {}
   |                ^ used as parameter more than once

error: aborting due to previous error

For more information about this error, try `rustc --explain E0415`.
